typestate-proc-macro/tests/fail/conflicting_state_attr.rs
use typestate_proc_macro::typestate;

#[typestate]
mod m {
    #[automata]
    struct S {}

    #[automata]
    #[state]
    struct A {}
}

fn main() {}